//
//  Dialogue.swift
//  Pixel Pursuit
//
//  Created by Ethan Marshall on 4/18/23.
//

import Foundation

let diskTableSceneChats: [String] = [
    "Connecting...",
    "Hello? Can you hear me?",
    "Hello, Agent! So glad you could make it here to help us.",
    "We're chasing one Amanda Becker, suspected of hacking the IDDA and stealing extremely sensitive information!",
    "We'd like to do computer forensics on her machine here, but her disk is encrypted.",
    "If you can, look around Amanda's office for anywhere her disk password might be hidden!",
    "Good luck, Agent! The IDDA thanks you!"
]

let officeSceneChats: [String] = [
    "This is Amanda's home office! Look around for a password for her hard disk.",
    "Excellent work! Now we can dive into Amanda's hard drive.",
    "Are you ready, Agent? Amanda's secrets await!"
]

let diskSceneChats: [String] = [
    "Here we are inside Amanda's files! Feel free to take a look around.",
    "We have word that Amanda's been using a secret server to house the data she steals.",
    "If you can find anything on that, we'll be golden!",
    "Look around the different folders and approach the computer if you think you have something.",
    "Amazing work!! It looks like we're ready to access Amanda's secret server.",
    "Time to see what this thief stole from the IDDA!"
]

let photosSceneChats: [String] = [
    "Here's Amanda's photos! I wonder what sort of camera these were taken with..."
]

let desktopSceneChats: [String] = [
    "Amanda seems to have left some important files on her desktop...see anything we can use?"
]

let webSceneChats: [String] = [
    "Ah, search history! Check for any clues to her secret website...or favorite animals?"
]

let serverSceneChats: [String] = [
    "We made it! Decide about Amanda and then tap to report your findings to the IDDA!"
]
