...
                .fontWeight(.bold)
                .foregroundStyle(themeColor)
                .textFieldStyle(.plain)
                .padding()
                .border(themeColor, width: 4)
                .padding(.horizontal)
                .accessibilityLabel("Disk password")

            Button(action: submitPassword) {
                Text("SUBMIT")
                    .foregroundStyle(.white)
                    .fontWeight(.bold)
                    .font(.robotoMono(25))
                    .frame(width: 250, height: 75)
                    .background(themeColor)
            }
...
