...
                                .font(.system(size: 125, weight: .thin))
                                .foregroundStyle(.red)
                                .opacity(isPowerLightPulsing ? 1 : 0)
                                .animation(.linear(duration: 2).repeatForever(autoreverses: true), value: isPowerLightPulsing)
                        }
                    }
                    .accessibilityLabel("Main power on")

                    Text("MAIN POWER ON")
                        .font(.robotoMono(35))
                }

                Spacer()
...
